# LUMS-RO

./: .replit  README.md  package-lock.json  package.json  pyproject.toml  replit.md  run.py  start.sh  start_prod.sh
attached_assets/: 24030011_Design_SRS_(1)_1770543957490.md  LUMS_RO_SRS_v2_SIMPLIFIED_3ROLES_1770559905678.md
client/: requirements.md
client/src/: App.tsx  index.css
client/src/components/: layout-shell.tsx  status-badge.tsx
client/src/hooks/: use-auth.ts  use-registrar.ts
client/src/lib/: queryClient.ts
client/src/pages/: calendar.tsx  dashboard.tsx  document-requests.tsx  login.tsx  major-applications.tsx  not-found.tsx  petitions.tsx
flask_app/: __init__.py  decorators.py  models.py  seed.py
flask_app/routes/: auth.py  calendar.py  document_requests.py  major_applications.py  notifications.py  payments.py  petitions.py
script/: build.ts
scripts/: push_to_github.mjs
server/: auth.ts  index.ts  routes.ts  static.ts  storage.ts
shared/: routes.ts  schema.ts
shared/models/: auth.ts
tests/: conftest.py  test_auth.py  test_calendar_payments_notifications.py  test_document_requests.py  test_major_applications.py  test_petitions.py
